[project]
name = "bloxlink_common"
version = "0.0.1"
authors = [
  { name="Lorttexwolf" },
]
description = "A common package meant to serve strcutured types and other utils commonly used between Bloxlink apps. "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lorttexwolf/bloxlink_common"
